--- a/templates/pages/create.html.twig
+++ b/templates/pages/create.html.twig
@@ -2,16 +2,17 @@
 
 {% block body %}
 
-	<div class="content">
-		{{ form_start(adForm) }}
-		{{ form_row(adForm.title) }}
-		{{ form_row(adForm.content) }}
-		{{ form_row(adForm.city) }}
-		{{ form_row(adForm.image) }}
-		{{ form_row(adForm.price) }}
+    <div class="content">
+        {{ form_start(adForm) }}
+        {{ form_row(adForm.title) }}
+        {{ form_row(adForm.content) }}
+		{{ form_row(adForm.region) }}
+        {{ form_row(adForm.city) }}
+        {{ form_row(adForm.imageFile) }} {# Use 'imageFile' instead of 'image' #}
+        {{ form_row(adForm.price) }}
 
-		<button type="submit">Publier</button>
-	</div>
-	{{ form_end(adForm) }}
+        <button type="submit">Publier</button>
+        {{ form_end(adForm) }}
+    </div>
 
 {% endblock %}
