--- a/templates/pages/edit.html.twig
+++ b/templates/pages/edit.html.twig
@@ -7,8 +7,9 @@
 		{{ form_start(adForm) }}
 		{{ form_row(adForm.title) }}
 		{{ form_row(adForm.content) }}
+		{{ form_row(adForm.region) }}
 		{{ form_row(adForm.city) }}
-		{{ form_row(adForm.image) }}
+		{{ form_row(adForm.imageFile) }}
 		{{ form_row(adForm.price) }}
 	<button type="submit">Mettre à jour</button>
 	{{ form_end(adForm) }}
