--- a/templates/pages/create.html.twig
+++ b/templates/pages/create.html.twig
@@ -8,7 +8,7 @@
         {{ form_row(adForm.content) }}
 		{{ form_row(adForm.region) }}
         {{ form_row(adForm.city) }}
-        {{ form_row(adForm.imageFile) }} {# Use 'imageFile' instead of 'image' #}
+        {{ form_row(adForm.imageFile) }}
         {{ form_row(adForm.price) }}
 
         <button type="submit">Publier</button>
