--- a/templates/pages/ad.html.twig
+++ b/templates/pages/ad.html.twig
@@ -26,6 +26,10 @@
 			{{ ad.region }}
 		</div>
 
+				<div>
+					{{ ad.city }}
+				</div>
+
 		<div>
 			<ion-icon class="icon" name="call-sharp"></ion-icon>
 			06 06 06 06 06
