--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,7 +63,6 @@ nav {
 }
 
 .category {
-    padding: 16px 24px 16px 24px;
     color: rgb(224, 224, 224);
     outline: none;
 }
@@ -101,7 +100,6 @@ a {
 
 select {
     background-color: rgba(255, 255, 255, 0);
-    padding: 16px 24px 16px 24px;
     color: rgb(224, 224, 224);
     border: none;
     font-weight: 700;
@@ -157,8 +155,15 @@ button {
     resize: none;
     font-weight: 700;
     font-family: "Poppins", sans-serif;
-    padding: 16px 24px 16px 24px;
     border: 2px solid rgba(0, 0, 0, 0);
+}
+
+.category,
+textarea,
+input,
+button,
+select {
+        padding: 16px 24px 16px 24px;
 }
 
 textarea {
