--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -9,11 +9,8 @@
         <option value="cheapest" {% if selectedSortOption == 'cheapest' %}selected{% endif %}>Moins cher</option>
     </select>
 
-    <a class="category" href="#">Africaine</a>
-    <a class="category" href="#">Arabe</a>
-    <a class="category" href="#">Asiatique</a>
-    <a class="category" href="#">Caucasienne</a>
-    <a class="category" href="#">Hispanique</a>
+    <a class="category" href="#">Immobilier</a>
+    <a class="category" href="#">Véhicules</a>
 
 </div>
 
